--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "final project consisting of Jesse's Top Travel Destinations",
   "main": "index.js",
   "scripts": {
-    "start": "browser-sync app -w"
+    "start": "eleventy --serve"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@11ty/eleventy": "^2.0.0",
     "browser-sync": "^2.27.12"
   }
 }
